@@ -1,0 +1,64 @@
+name: Clang-Windows
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - 'scripts/**'
+
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - 'scripts/**'
+
+jobs:
+  clang_msvc:
+    runs-on: windows-2025
+    strategy:
+      matrix:
+        compiler: [ clang-cl ]
+        build_type: [ Debug, Release ]
+        std: [ 20 ]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Create Build Directory
+        run: cmake -E make_directory ${{runner.workspace}}/build
+
+      - name: Configure with Clang
+        shell: bash
+        working-directory: ${{ github.workspace }}
+        run: |
+          # Set compiler paths based on matrix selection
+          if [[ "${{ matrix.compiler }}" == "clang++" ]]; then
+            C_COMPILER="clang"
+            CXX_COMPILER="clang++"
+          else
+            C_COMPILER="clang-cl"
+            CXX_COMPILER="clang-cl"
+          fi
+          
+          cmake -S . -B "${{ runner.workspace }}/build" -G "Ninja" \
+            -DCMAKE_C_COMPILER="$C_COMPILER" \
+            -DCMAKE_CXX_COMPILER="$CXX_COMPILER" \
+            -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
+            -DCMAKE_CXX_STANDARD=${{matrix.std}} \
+            -DCLOB_BUILD_TESTS=ON \
+            -DCLOB_VERBOSE_MAKEFILE=ON
+
+      - name: Build
+        working-directory: ${{runner.workspace}}/build
+        run: |
+          $threads = (Get-CimInstance Win32_ComputerSystem).NumberOfLogicalProcessors
+          cmake --build . --config ${{matrix.build_type}} --parallel $threads
+
+      - name: Test
+        working-directory: ${{runner.workspace}}/build
+        run: |
+          ctest --build-config ${{matrix.build_type}} --output-on-failure
