@@ -1,0 +1,161 @@
+name: Ubuntu
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - 'scripts/**'
+
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - 'scripts/**'
+
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        cxx: [ g++-10 ]
+        build_type: [ Debug, Release ]
+        std: [ 20 ]
+        os: [ ubuntu-22.04 ]
+        with_tests: [ ON ]
+
+        include:
+          # Build and with g++10
+          - cxx: g++-10
+            std: 20
+            os: ubuntu-22.04
+            with_tests: ON
+            install: |
+              sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu focal main universe"
+              sudo apt update
+              sudo apt -o Acquire::Retries=5 install g++-10
+
+          - cxx: g++-13
+            build_type: Release
+            std: 23
+            os: ubuntu-22.04
+            with_tests: ON
+            install: sudo apt -o Acquire::Retries=5 install g++-13
+
+          - cxx: g++-13
+            build_type: Debug
+            std: 23
+            os: ubuntu-22.04
+            with_tests: ON
+            install: sudo apt -o Acquire::Retries=5 install g++-13
+
+          - cxx: g++-14
+            build_type: Release
+            std: 23
+            os: ubuntu-24.04
+            with_tests: ON
+            cmake_options: -DCLOB_ENABLE_GCC_HARDENING=ON
+            install: sudo apt -o Acquire::Retries=5 install g++-14
+
+          - cxx: g++-14
+            build_type: Debug
+            std: 23
+            os: ubuntu-24.04
+            with_tests: ON
+            cmake_options: -DCLOB_ENABLE_GCC_HARDENING=ON
+            install: sudo apt -o Acquire::Retries=5 install g++-14
+
+            # Builds the examples with no exceptions
+          - cxx: g++-10
+            build_type: Release
+            std: 20
+            os: ubuntu-22.04
+            with_tests: OFF
+            cmake_options: -DCLOB_NO_EXCEPTIONS=ON
+
+            # Build and test with valgrind
+          - cxx: g++-10
+            build_type: Release
+            std: 20
+            os: ubuntu-22.04
+            with_tests: ON
+            cmake_options: -DCLOB_USE_VALGRIND=ON
+            ctest_options: -T memcheck
+            install: sudo apt -o Acquire::Retries=5 install valgrind
+            
+            # Build and test address sanitizers
+          - cxx: clang++-14
+            build_type: Release
+            std: 20
+            os: ubuntu-22.04
+            with_tests: ON
+            cmake_options: -DCLOB_SANITIZE_ADDRESS=ON
+
+            # Build and test thread sanitizers
+          - cxx: clang++-14
+            build_type: Release
+            std: 20
+            os: ubuntu-22.04
+            with_tests: ON
+            cmake_options: -DCLOB_SANITIZE_THREAD=ON
+
+            # Build with modern clang version
+          - cxx: clang++-19
+            build_type: Release
+            std: 20
+            os: ubuntu-22.04
+            with_tests: ON
+            install: |
+              wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+              sudo add-apt-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-19 main"
+              sudo apt-get update
+              for i in {1..3}; do
+                sudo apt-get -o Acquire::Retries=3 install -y clang-19 libc++-19-dev libc++abi-19-dev && break || sleep 15
+              done
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Add repositories for newer GCC
+        run: |
+          sudo apt-add-repository ppa:ubuntu-toolchain-r/test
+        if: ${{ matrix.cxx == 'g++-13' }}
+      
+      - name: Create Build Environment
+        run: |
+          sudo apt-get update
+          ${{matrix.install}}
+          if [[ "${{matrix.cxx}}" == "clang++-19" ]]; then
+            sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-19 100
+            sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-19 100
+          fi
+          cmake -E make_directory ${{runner.workspace}}/build
+
+      - name: Configure
+        working-directory: ${{runner.workspace}}/build
+        env:
+          CXX: ${{matrix.cxx}}
+          CXXFLAGS: ${{matrix.cxxflags}}
+        run: |
+          cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} ${{matrix.cmake_options}} \
+                -DCMAKE_CXX_STANDARD=${{matrix.std}} -DCLOB_BUILD_TESTS=${{matrix.with_tests}} \
+                -DCLOB_VERBOSE_MAKEFILE=ON $GITHUB_WORKSPACE
+
+      - name: Build
+        working-directory: ${{runner.workspace}}/build
+        run: |
+          threads=`nproc`
+          cmake --build . --config ${{matrix.build_type}} --parallel $threads
+
+      - name: Test
+        working-directory: ${{runner.workspace}}/build
+        run: |
+          threads=`nproc`
+          ctest --build-config ${{matrix.build_type}} ${{matrix.ctest_options}} --parallel $threads --output-on-failure
+        env:
+          CTEST_OUTPUT_ON_FAILURE: True
