@@ -1,1 +1,48 @@
-Low Latency C++ Central Limit Order Book Engine
+<div align="center">
+
+  <br>
+  <h1>Clob</h1>
+  <p><b>Low Latency C++ Central Limit Order Book Engine</b></p>
+
+  <div>
+  </div>
+  <div>
+    <a href="https://codecov.io/github/lunathanael/clob" > 
+        <img src="https://codecov.io/github/lunathanael/clob/branch/main/graph/badge.svg?token=PJWX5ZR7BW"/> 
+    </a>
+    <a href="https://app.codacy.com?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_grade">
+      <img src="https://app.codacy.com/project/badge/Grade/31b750477d4942649e8dfd7059c29ad7" alt="Codacy" />
+    </a>
+  </div>
+
+  <div>
+    <a href="https://opensource.org/licenses/MIT">
+      <img src="https://img.shields.io/badge/license-MIT-blue.svg?style=flat-square" alt="license" />
+    </a>
+    <a href="https://en.wikipedia.org/wiki/C%2B%2B20">
+      <img src="https://img.shields.io/badge/language-C%2B%2B20-red.svg?style=flat-square" alt="language" />
+    </a>
+  </div>
+
+</div>
+
+---
+
+## 🧭 Table of Contents
+
+- [Introduction](#-introduction)
+- [License](#-license)
+
+---
+
+## Introduction
+Clob is a Low Latency C++ Central Limit Order Book Engine
+
+---
+
+## License
+
+Clob is licensed under the [MIT License](http://opensource.org/licenses/MIT)
+
+Clob depends on third party libraries with separate copyright notices and license terms.
+- ([MIT License](http://opensource.org/licenses/MIT)) [doctest](http://github.com/onqtam/doctest/blob/master/LICENSE.txt)
