@@ -7,6 +7,9 @@
 
 ## v0.1.0
 
+- Initial pre-version release
+- Updated Readme
+- Added Ubuntu, Fedora, GCC15, Windows, Clang-Windows Builds
 - Added placeholder classes `Market`, `Stock`, `LimitOrder`, `OrderBook`
 - Implemented rudimentary compiling options including variable building with cmake
 - Added Code Coverage
